--- a/datawinners/media/css/scss/section_data.scss
+++ b/datawinners/media/css/scss/section_data.scss
@@ -293,7 +293,7 @@ table{
 
 #time_submit{
     margin-top: 0px;
-    width: 70px;
+    min-width: 75px;
     height: 29px;
 }
 
